--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p class="localisation_place">Paris, Belleville</p>
         </div>
 
-        <h2 class="title grip_title">Réservz le menu qui vous convient</h2>
+        <h2 class="title grip_title">Réservez le menu qui vous convient</h2>
         <p class="grip_text">Découvrez des restaurants d'exception, séléctionés par nos soins.</p>
 
         <button type="button">Explorer nos Restaurants</button>
@@ -35,8 +35,9 @@
 <!-- Partie du Menu avec 3 bouttons -->
     <section class="navmenu">
         <h2 class="title">hello</h2>
+        
+        "1"
         <div class="notice_label">
-            "1"
             <i class="fa-solid fa-mobile-screen-button"></i>
             <p class="notice_text">Choisissez un restaurant</p>
         </div>
@@ -65,7 +66,7 @@
                     <button type="button">Nouveau</button>
                 </figure>
                 <div class="info_restaurant">
-                    <h3 class="restaurant_name">Lorem ipsum</h3>
+                    <h3 class="restaurant_name">La Palette du goût</h3>
                     <p class="restaurant_district">Lorem ipsum dolor sit amet.</p>
                 </div>    
             </a>
@@ -81,7 +82,7 @@
                     <button type="button">Nouveau</button>
                 </figure>
                 <div class="info_restaurant">
-                    <h3 class="restaurant_name">Lorem ipsum</h3>
+                    <h3 class="restaurant_name">La note enchantée</h3>
                     <p class="restaurant_district">Lorem ipsum dolor sit amet.</p>
                 </div>    
             </a>
@@ -96,7 +97,7 @@
                     <img src="/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
                 </figure>
                 <div class="info_restaurant">
-                    <h3 class="restaurant_name">Lorem ipsum</h3>
+                    <h3 class="restaurant_name">A la française</h3>
                     <p class="restaurant_district">Lorem ipsum dolor sit amet.</p>
                 </div>    
             </a>
@@ -111,7 +112,7 @@
                     <img src="/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                 </figure>
                 <div class="info_restaurant">
-                    <h3 class="restaurant_name">Lorem ipsum</h3>
+                    <h3 class="restaurant_name">Le délice des sens</h3>
                     <p class="restaurant_district">Lorem ipsum dolor sit amet.</p>
                 </div>    
             </a>
@@ -122,17 +123,15 @@
 
 
 <!-- Partie du Footer -->
-    <footer>
-        <h4>ohmyfood</h4> <!-- LOGO ICI -->
-        <div class="text_footer">
-            <i class="fa-solid fa-utensils"></i>
-            <span class="choice_footer"> Proposer un restaurant</span>
-            <i class="fa-solid fa-handshake-angle"></i>
-            <span class="choice_footer"> Devenir partenaire</span>
-            <span class="choice_footer"> Mentions légales</span>
-            <span class="choice_footer"> Contact</span>
-        </div>
-    </footer>
+<footer>
+    <h4>ohmyfood</h4>
+    <ul>
+        <!--logo--><li>Proposer un restaurant</li>
+        <!--logo--><li>Devenir partenaire</li>
+        <li>Mentions légales</li>
+        <li>Contact</li>
+    </ul>
+</footer>
 
 </body>
 </html>
