--- a/note.html
+++ b/note.html
@@ -35,7 +35,7 @@
 <!-- Partie Entrées du menu-->
     <div class="entrees">
         <h3 class="categorie_menu">Entrées</h3>
-        (div spératrice)
+        <span class="bar_divider"></span>
 
         <article class="label_box">
             <div class="anim_label">
@@ -75,7 +75,7 @@
 <!-- Partie des plats du menu -->
     <div class="plats">
         <h3 class="categorie_menu">Plats</h3>
-        (div spératrice)
+        <span class="bar_divider"></span>
 
         <article class="label_box">
             <div class="anim_label">
@@ -115,7 +115,7 @@
 <!-- Partie des desserts du menu-->
     <div class="desserts">
         <h3 class="categorie_menu">Desserts</h3>
-        (div spératrice)
+        <span class="bar_divider"></span>
 
         <article class="label_box">
             <div class="anim_label">
@@ -158,15 +158,13 @@
 
 <!-- Partie du Footer -->
 <footer>
-    <h4>ohmyfood</h4> <!-- LOGO ICI -->
-    <div class="text_footer">
-        <i class="fa-solid fa-utensils"></i>
-        <span class="choice_footer"> Proposer un restaurant</span>
-        <i class="fa-solid fa-handshake-angle"></i>
-        <span class="choice_footer"> Devenir partenaire</span>
-        <span class="choice_footer"> Mentions légales</span>
-        <span class="choice_footer"> Contact</span>
-    </div>
+    <h4>ohmyfood</h4>
+    <ul>
+        <!--logo--><li>Proposer un restaurant</li>
+        <!--logo--><li>Devenir partenaire</li>
+        <li>Mentions légales</li>
+        <li>Contact</li>
+    </ul>
 </footer>
 
 
