--- a/delice.html
+++ b/delice.html
@@ -20,12 +20,12 @@
     <a href="index.html">
         <button type="button"><i class="fa-solid fa-arrow-left"></i></button>
     </a>
-    <img src="/img/ohmyfood.png" alt="logo ohmyfood"> <!-- LOGO ICI -->
+    <img src="img/ohmyfood.png" alt="logo ohmyfood"> <!-- LOGO ICI -->
 </header>
 
 <!-- Partie de l'image de fond -->
 <section class="picture">
-    <img src="/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image de fond du menu Le délice des sens">
+    <img src="img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image de fond du menu Le délice des sens">
 </section>
 
 <!-- Partie de la présentation du menu -->
