--- a/francaise.html
+++ b/francaise.html
@@ -20,12 +20,12 @@
         <a href="index.html">
             <button type="button"><i class="fa-solid fa-arrow-left"></i></button>
         </a>
-        <img src="/img/ohmyfood.png" alt="logo ohmyfood"> <!-- LOGO ICI -->
+        <img src="img/ohmyfood.png" alt="logo ohmyfood"> <!-- LOGO ICI -->
     </header>
 
 <!-- Partie de l'image de fond -->
     <section class="picture">
-        <img src="/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image de fond du menu A la française">
+        <img src="img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image de fond du menu A la française">
     </section>
 
 <!-- Partie de la présentation du menu -->
