--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <!-- Partie Titre du site -->
     <header>
-        <img src="/img/ohmyfood.png" alt="logo ohmyfood"> <!-- LOGO ICI -->
+        <img src="img/ohmyfood.png" alt="logo ohmyfood"> <!-- LOGO ICI -->
     </header>
     
 <!-- Partie Localisation de restaurants-->
@@ -62,7 +62,7 @@
         <article class="restaurant_choice">
             <a href="palette.html">
                 <figure class="restaurant_pic">
-                    <img src="/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Palette du goût">
+                    <img src="img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Palette du goût">
                     <button type="button">Nouveau</button>
                 </figure>
                 <div class="info_restaurant">
@@ -78,7 +78,7 @@
         <article class="restaurant_choice">
             <a href="note.html">
                 <figure class="restaurant_pic">
-                    <img src="/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                    <img src="img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                     <button type="button">Nouveau</button>
                 </figure>
                 <div class="info_restaurant">
@@ -94,7 +94,7 @@
         <article class="restaurant_choice">
             <a href="francaise.html">
                 <figure class="restaurant_pic">
-                    <img src="/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
+                    <img src="img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
                 </figure>
                 <div class="info_restaurant">
                     <h3 class="restaurant_name">A la française</h3>
@@ -109,7 +109,7 @@
         <article class="restaurant_choice">
             <a href="delice.html">
                 <figure class="restaurant_pic">
-                    <img src="/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                    <img src="img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                 </figure>
                 <div class="info_restaurant">
                     <h3 class="restaurant_name">Le délice des sens</h3>
