--- a/note.html
+++ b/note.html
@@ -20,12 +20,12 @@
     <a href="index.html">
         <button type="button"><i class="fa-solid fa-arrow-left"></i></button>
     </a>
-    <img src="/img/ohmyfood.png" alt="logo ohmyfood"> <!-- LOGO ICI -->
+    <img src="img/ohmyfood.png" alt="logo ohmyfood"> <!-- LOGO ICI -->
 </header>
 
 <!-- Partie de l'image de fond -->
 <section class="picture">
-    <img src="/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image de fond du menu La note enchantée">
+    <img src="img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image de fond du menu La note enchantée">
 </section>
 
 <!-- Partie de la présentation du menu -->
