css index + francaise

--- a/francaise.html
+++ b/francaise.html
@@ -30,124 +30,126 @@
 
 <!-- Partie de la présentation du menu -->
     <section class="menu">
-        <h2 class="title_menu">À la française</h2>
-        <i class="fa-regular fa-heart"></i>
-    <!-- Partie Entrées du menu-->
-        <div class="entrees">
-            <h3 class="categorie_menu">Entrées</h3>
+        <div class="title">
+            <h2 class="title_menu">À la française</h2>
+            <i class="fa-regular fa-heart"></i>    
+        </div>
+     <!-- Partie Entrées du menu-->
+        <div class="categorie">
+            <h3>Entrées</h3>
             <span class="bar_divider"></span>
 
             <article class="label_box">
                 <div class="anim_label">
-                    <span class="label_title">Lorem ipsum</span>
+                    <span>Tartare de poulpe acidulé</span>
                     <div class="presentation_entree">
-                        <p>bla bla bla</p>
-                        <p>2650€</p>
+                        <p>Aux zests d'orange</p>
+                        <p>25€</p>
                     </div>
-                    <i class="fa-solid fa-circle-check"></i>   
                 </div>
+                <i class="fa-solid fa-circle-check"></i>   
             </article>
 
             <article class="label_box">
                 <div class="anim_label">
-                    <span class="label_title">Lorem ipsum</span>
+                    <span>Velouté de légumes d'antan</span>
                     <div class="presentation_entree">
-                        <p>bla bla bla</p>
-                        <p>2650€</p>
+                        <p>carotte, panais, topinambour</p>
+                        <p>35€</p>
                     </div>
-                    <i class="fa-solid fa-circle-check"></i>   
                 </div>
+                <i class="fa-solid fa-circle-check"></i>   
             </article>
 
             <article class="label_box">
                 <div class="anim_label">
-                    <span class="label_title">Lorem ipsum</span>
+                    <span>Soupe à l'oignon</span>
                     <div class="presentation_entree">
-                        <p>bla bla bla</p>
-                        <p>2650€</p>
+                        <p>Revisitée</p>
+                        <p>20€</p>
                     </div>
-                    <i class="fa-solid fa-circle-check"></i>   
                 </div>
+                <i class="fa-solid fa-circle-check"></i>   
             </article>
 
         </div>
     
-    <!-- Partie des plats du menu -->
-        <div class="plats">
-            <h3 class="categorie_menu">Plats</h3>
+     <!-- Partie des plats du menu -->
+        <div class="categorie">
+            <h3>Plats</h3>
             <span class="bar_divider"></span>
 
             <article class="label_box">
                 <div class="anim_label">
-                    <span class="label_title">Lorem ipsum</span>
+                    <span>Coquilles Saint-Jacques</span>
                     <div class="presentation_entree">
-                        <p>bla bla bla</p>
-                        <p>2650€</p>
+                        <p>Accompagnées d'une purée de panais</p>
+                        <p>40€</p>
                     </div>
-                    <i class="fa-solid fa-circle-check"></i>   
                 </div>
+                <i class="fa-solid fa-circle-check"></i>   
             </article>
 
             <article class="label_box">
                 <div class="anim_label">
-                    <span class="label_title">Lorem ipsum</span>
+                    <span>Magret de canard</span>
                     <div class="presentation_entree">
-                        <p>bla bla bla</p>
-                        <p>2650€</p>
+                        <p>Et parmentier de pommes de terres</p>
+                        <p>35€</p>
                     </div>
-                    <i class="fa-solid fa-circle-check"></i>   
                 </div>
+                <i class="fa-solid fa-circle-check"></i>   
             </article>
 
             <article class="label_box">
                 <div class="anim_label">
-                    <span class="label_title">Lorem ipsum</span>
+                    <span>Pigeonneau d'Ille-et-Vilaine</span>
                     <div class="presentation_entree">
-                        <p>bla bla bla</p>
-                        <p>2650€</p>
+                        <p>sur son lit de gnocchis aux légumes</p>
+                        <p>44€</p>
                     </div>
-                    <i class="fa-solid fa-circle-check"></i>   
                 </div>
+                <i class="fa-solid fa-circle-check"></i>   
             </article>
 
         </div>
 
-    <!-- Partie des desserts du menu-->
-        <div class="desserts">
-            <h3 class="categorie_menu">Desserts</h3>
+     <!-- Partie des desserts du menu-->
+        <div class="categorie">
+            <h3>Desserts</h3>
             <span class="bar_divider"></span>
 
             <article class="label_box">
                 <div class="anim_label">
-                    <span class="label_title">Lorem ipsum</span>
+                    <span>Pétales de violettes glacés</span>
                     <div class="presentation_dessert">
-                        <p>bla bla bla</p>
-                        <p>2650€</p>
+                        <p>Et purée de noisettes</p>
+                        <p>18€</p>
                     </div>
-                    <i class="fa-solid fa-circle-check"></i>   
                 </div>
+                <i class="fa-solid fa-circle-check"></i>   
             </article>
 
             <article class="label_box">
                 <div class="anim_label">
-                    <span class="label_title">Lorem ipsum</span>
+                    <span>Fondant au chocolat</span>
                     <div class="presentation_entree">
-                        <p>bla bla bla</p>
-                        <p>2650€</p>
+                        <p>Revisité</p>
+                        <p>22€</p>
                     </div>
-                    <i class="fa-solid fa-circle-check"></i>   
                 </div>
+                <i class="fa-solid fa-circle-check"></i>   
             </article>
 
             <article class="label_box">
                 <div class="anim_label">
-                    <span class="label_title">Lorem ipsum</span>
+                    <span>Millefeuille croustillant</span>
                     <div class="presentation_entree">
-                        <p>bla bla bla</p>
-                        <p>2650€</p>
+                        <p>Myrtilles et pâte d'amande</p>
+                        <p>23€</p>
                     </div>
-                    <i class="fa-solid fa-circle-check"></i>   
                 </div>
+                <i class="fa-solid fa-circle-check"></i>   
             </article>
 
         </div>
