--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
 <!-- Partie Titre du site -->
     <header>
+        <button type="button"><i class="fa-solid fa-arrow-left"></i></button>
         <img src="img/ohmyfood.png" alt="logo ohmyfood"> <!-- LOGO ICI -->
     </header>
     
@@ -63,7 +64,7 @@
                 </figure>
                 <div class="info_restaurant">
                     <h3 class="restaurant_name">La Palette du goût</h3>
-                    <p class="restaurant_district">Lorem ipsum dolor sit amet.</p>
+                    <p class="restaurant_district">Ménilmontant</p>
                 </div>    
             </a>
             <div class="favorite">
@@ -79,7 +80,7 @@
                 </figure>
                 <div class="info_restaurant">
                     <h3 class="restaurant_name">La note enchantée</h3>
-                    <p class="restaurant_district">Lorem ipsum dolor sit amet.</p>
+                    <p class="restaurant_district">Charonne</p>
                 </div>    
             </a>
             <div class="favorite">
@@ -94,7 +95,7 @@
                 </figure>
                 <div class="info_restaurant">
                     <h3 class="restaurant_name">A la française</h3>
-                    <p class="restaurant_district">Lorem ipsum dolor sit amet.</p>
+                    <p class="restaurant_district">Cité Rouge</p>
                 </div>    
             </a>
             <div class="favorite">
@@ -109,7 +110,7 @@
                 </figure>
                 <div class="info_restaurant">
                     <h3 class="restaurant_name">Le délice des sens</h3>
-                    <p class="restaurant_district">Lorem ipsum dolor sit amet.</p>
+                    <p class="restaurant_district">Folie-Méricourt</p>
                 </div>    
             </a>
             <div class="favorite">
