position bouton + menu

--- a/delice.html
+++ b/delice.html
@@ -30,124 +30,126 @@
 
 <!-- Partie de la présentation du menu -->
 <section class="menu">
-    <h2 class="title_menu">Le délice des sens</h2>
-    <i class="fa-regular fa-heart"></i>
-<!-- Partie Entrées du menu-->
-    <div class="entrees">
-        <h3 class="categorie_menu">Entrées</h3>
+    <div class="title">
+        <h2 class="title_menu">Le délice des sens</h2>
+        <i class="fa-regular fa-heart"></i>    
+    </div>
+ <!-- Partie Entrées du menu-->
+    <div class="categorie">
+        <h3>Entrées</h3>
         <span class="bar_divider"></span>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Tartare de thon</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Assaisonné au yuzu</p>
+                    <p class="price">25€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Bouchée de homard croustillant</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Et sa farandole de petits légumes</p>
+                    <p class="price">35€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Velouté de cèpes</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Aux truffes</p>
+                    <p class="price">20€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
     </div>
 
-<!-- Partie des plats du menu -->
-    <div class="plats">
-        <h3 class="categorie_menu">Plats</h3>
+ <!-- Partie des plats du menu -->
+    <div class="categorie">
+        <h3>Plats</h3>
         <span class="bar_divider"></span>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Poulet rôti aux herbes de provence</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Et sa crème de truffe</p>
+                    <p class="price">40€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Langouste rôtie</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Et ses légumes de saison</p>
+                    <p class="price">35€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Côte de boeuf angus</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Et sa purée de panais</p>
+                    <p class="price">44€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
     </div>
 
-<!-- Partie des desserts du menu-->
-    <div class="desserts">
-        <h3 class="categorie_menu">Desserts</h3>
+ <!-- Partie des desserts du menu-->
+    <div class="categorie">
+        <h3>Desserts</h3>
         <span class="bar_divider"></span>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Farandole de desserts</span>
                 <div class="presentation_dessert">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Du chef</p>
+                    <p class="price">18€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Crème brulée</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Revisitée</p>
+                    <p class="price">22€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Tiramisu</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>A la noisette</p>
+                    <p class="price">23€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
     </div>
@@ -155,7 +157,6 @@
     <button type="button" class="order">Commander</button>
 
 </section>
-
 <!-- Partie du Footer -->
 <footer>
     <h4>ohmyfood</h4>
