--- a/francaise.html
+++ b/francaise.html
@@ -44,7 +44,7 @@
                     <span>Tartare de poulpe acidulé</span>
                     <div class="presentation_entree">
                         <p>Aux zests d'orange</p>
-                        <p>25€</p>
+                        <p class="price">25€</p>
                     </div>
                 </div>
                 <i class="fa-solid fa-circle-check"></i>   
@@ -55,7 +55,7 @@
                     <span>Velouté de légumes d'antan</span>
                     <div class="presentation_entree">
                         <p>carotte, panais, topinambour</p>
-                        <p>35€</p>
+                        <p class="price">35€</p>
                     </div>
                 </div>
                 <i class="fa-solid fa-circle-check"></i>   
@@ -66,7 +66,7 @@
                     <span>Soupe à l'oignon</span>
                     <div class="presentation_entree">
                         <p>Revisitée</p>
-                        <p>20€</p>
+                        <p class="price">20€</p>
                     </div>
                 </div>
                 <i class="fa-solid fa-circle-check"></i>   
@@ -84,7 +84,7 @@
                     <span>Coquilles Saint-Jacques</span>
                     <div class="presentation_entree">
                         <p>Accompagnées d'une purée de panais</p>
-                        <p>40€</p>
+                        <p class="price">40€</p>
                     </div>
                 </div>
                 <i class="fa-solid fa-circle-check"></i>   
@@ -95,7 +95,7 @@
                     <span>Magret de canard</span>
                     <div class="presentation_entree">
                         <p>Et parmentier de pommes de terres</p>
-                        <p>35€</p>
+                        <p class="price">35€</p>
                     </div>
                 </div>
                 <i class="fa-solid fa-circle-check"></i>   
@@ -106,7 +106,7 @@
                     <span>Pigeonneau d'Ille-et-Vilaine</span>
                     <div class="presentation_entree">
                         <p>sur son lit de gnocchis aux légumes</p>
-                        <p>44€</p>
+                        <p class="price">44€</p>
                     </div>
                 </div>
                 <i class="fa-solid fa-circle-check"></i>   
@@ -124,7 +124,7 @@
                     <span>Pétales de violettes glacés</span>
                     <div class="presentation_dessert">
                         <p>Et purée de noisettes</p>
-                        <p>18€</p>
+                        <p class="price">18€</p>
                     </div>
                 </div>
                 <i class="fa-solid fa-circle-check"></i>   
@@ -135,7 +135,7 @@
                     <span>Fondant au chocolat</span>
                     <div class="presentation_entree">
                         <p>Revisité</p>
-                        <p>22€</p>
+                        <p class="price">22€</p>
                     </div>
                 </div>
                 <i class="fa-solid fa-circle-check"></i>   
@@ -146,7 +146,7 @@
                     <span>Millefeuille croustillant</span>
                     <div class="presentation_entree">
                         <p>Myrtilles et pâte d'amande</p>
-                        <p>23€</p>
+                        <p class="price">23€</p>
                     </div>
                 </div>
                 <i class="fa-solid fa-circle-check"></i>   
