--- a/note.html
+++ b/note.html
@@ -30,124 +30,137 @@
 
 <!-- Partie de la présentation du menu -->
 <section class="menu">
-    <h2 class="title_menu">La note enchantée</h2>
-    <i class="fa-regular fa-heart"></i>
-<!-- Partie Entrées du menu-->
-    <div class="entrees">
-        <h3 class="categorie_menu">Entrées</h3>
+    <div class="title">
+        <h2 class="title_menu">La note enchantée</h2>
+        <i class="fa-regular fa-heart"></i>    
+    </div>
+ <!-- Partie Entrées du menu-->
+    <div class="categorie">
+        <h3>Entrées</h3>
         <span class="bar_divider"></span>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Ravioles de foie gras</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Accompagnés de leur crème à la truffe</p>
+                    <p class="price">25€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Caviar osciètre</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Sur blini à la farine de blé noir</p>
+                    <p class="price">35€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Homard et espuma de concombre</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Mariné aux zests d'orange</p>
+                    <p class="price">20€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
+        </article>
+
+        <article class="label_box">
+            <div class="anim_label">
+                <span>Foie gras de canard cuit entier</span>
+                <div class="presentation_entree">
+                    <p>Confiture de figue et pain toasté</p>
+                    <p class="price">35€</p>
+                </div>
+            </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
     </div>
 
-<!-- Partie des plats du menu -->
-    <div class="plats">
-        <h3 class="categorie_menu">Plats</h3>
+ <!-- Partie des plats du menu -->
+    <div class="categorie">
+        <h3>Plats</h3>
         <span class="bar_divider"></span>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Noix de coquilles Saint-Jacques</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Sur lit de purée de céleri-rave</p>
+                    <p class="price">40€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Langoustine poêlée</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Purée de patate douce</p>
+                    <p class="price">35€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Mijoté de queue de boeuf</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Et riz sauvage aux zests de citron</p>
+                    <p class="price">44€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
     </div>
 
-<!-- Partie des desserts du menu-->
-    <div class="desserts">
-        <h3 class="categorie_menu">Desserts</h3>
+ <!-- Partie des desserts du menu-->
+    <div class="categorie">
+        <h3>Desserts</h3>
         <span class="bar_divider"></span>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Macaron noisette et chocolat</span>
                 <div class="presentation_dessert">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Glace au caramel brun et sel de Guérande</p>
+                    <p class="price">18€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Baba au rhum revisité</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Avec son coulis de citron</p>
+                    <p class="price">22€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Tarte au citron meringuée</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Destructurée</p>
+                    <p class="price">23€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
     </div>
@@ -155,7 +168,6 @@
     <button type="button" class="order">Commander</button>
 
 </section>
-
 <!-- Partie du Footer -->
 <footer>
     <h4>ohmyfood</h4>
