--- a/palette.html
+++ b/palette.html
@@ -30,124 +30,126 @@
 
 <!-- Partie de la présentation du menu -->
 <section class="menu">
-    <h2 class="title_menu">La palette du goût</h2>
-    <i class="fa-regular fa-heart"></i>
-<!-- Partie Entrées du menu-->
-    <div class="entrees">
-        <h3 class="categorie_menu">Entrées</h3>
+    <div class="title">
+        <h2 class="title_menu">La palette du goût</h2>
+        <i class="fa-regular fa-heart"></i>    
+    </div>
+ <!-- Partie Entrées du menu-->
+    <div class="categorie">
+        <h3>Entrées</h3>
         <span class="bar_divider"></span>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Fricassée d'escargot</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Au pimet d'espelette</p>
+                    <p class="price">25€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Foie gras de canard mi-cuit</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Et ses copeaux de truffe noire</p>
+                    <p class="price">35€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Oeuf au plat</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Assaisonné à la truffe sur lit de purée jaune</p>
+                    <p class="price">20€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
     </div>
 
-<!-- Partie des plats du menu -->
-    <div class="plats">
-        <h3 class="categorie_menu">Plats</h3>
+ <!-- Partie des plats du menu -->
+    <div class="categorie">
+        <h3>Plats</h3>
         <span class="bar_divider"></span>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Filet de boeuf aux herbes</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Accompagné de sa ribambelle de légumes</p>
+                    <p class="price">40€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>parmentier de queue de boeuf</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>A la truffe noir sur sa purée de panais</p>
+                    <p class="price">35€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Filet de Turbot</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Aux agrumes</p>
+                    <p class="price">44€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
     </div>
 
-<!-- Partie des desserts du menu-->
-    <div class="desserts">
-        <h3 class="categorie_menu">Desserts</h3>
+ <!-- Partie des desserts du menu-->
+    <div class="categorie">
+        <h3>Desserts</h3>
         <span class="bar_divider"></span>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Paris-Brest</span>
                 <div class="presentation_dessert">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Revisité</p>
+                    <p class="price">18€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Macaron au chocolat d'exception</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Et glace à la vanille de Madagascar</p>
+                    <p class="price">22€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
         <article class="label_box">
             <div class="anim_label">
-                <span class="label_title">Lorem ipsum</span>
+                <span>Mousse au chocolat</span>
                 <div class="presentation_entree">
-                    <p>bla bla bla</p>
-                    <p>2650€</p>
+                    <p>Au piment d'espelette et à la truffe noire</p>
+                    <p class="price">23€</p>
                 </div>
-                <i class="fa-solid fa-circle-check"></i>   
             </div>
+            <i class="fa-solid fa-circle-check"></i>   
         </article>
 
     </div>
@@ -155,7 +157,6 @@
     <button type="button" class="order">Commander</button>
 
 </section>
-
 <!-- Partie du Footer -->
 <footer>
     <h4>ohmyfood</h4>
