loader + fade + btn

--- a/delice.html
+++ b/delice.html
@@ -18,7 +18,7 @@
 <!-- Partie du Header -->
 <header>
     <a href="index.html">
-        <button type="button"><i class="fa-solid fa-arrow-left"></i></button>
+        <button type="button" ><i class="fa-solid fa-arrow-left"></i></button>
     </a>
     <img src="img/ohmyfood.png" alt="logo ohmyfood"> <!-- LOGO ICI -->
 </header>
@@ -154,8 +154,9 @@
 
     </div>
 
-    <button type="button" class="order">Commander</button>
-
+    <div class="btn_container">
+        <button type="button" class="generic">Commander</button>
+    </div>
 </section>
 <!-- Partie du Footer -->
 <footer>
