--- a/note.html
+++ b/note.html
@@ -162,12 +162,14 @@
             </div>
             <i class="fa-solid fa-circle-check"></i>   
         </article>
-
     </div>
 
-    <button type="button" class="order">Commander</button>
-
+    <div class="btn_container">
+        <button type="button" class="generic">Commander</button>
+    </div>
 </section>
+
+
 <!-- Partie du Footer -->
 <footer>
     <h4>ohmyfood</h4>
