--- a/palette.html
+++ b/palette.html
@@ -154,8 +154,9 @@
 
     </div>
 
-    <button type="button" class="order">Commander</button>
-
+    <div class="btn_container">
+        <button type="button" class="generic">Commander</button>
+    </div>
 </section>
 <!-- Partie du Footer -->
 <footer>
