--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>OhMyFood</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="loader.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +15,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 <body>
+<!-- Partie Loader -->
+    <div class="loader">
+        <div class="color_cont">
+            <div class="color color1"></div>
+            <div class="color color2"></div>
+            <div class="color color3"></div>
+        </div>
+    
+        <svg class="icone" xmlns="http://www.w3.org/2000/svg" viewBox="-2.75 8.8 61.5 7.5">
+            <path d="m 1 16 C -4 16 -4 9 1 9 C 6 9 6 16 1 16 Z M 6 16 L 6 9 L 8 9 L 8 12 L 10 12 L 10 9 L 12 9 L 12 16 L 10 16 L 10 14 L 8 14 L 8 16 Z M 13 16 L 13 9 L 15 9 L 16 11 L 17 9 L 19 9 L 19 16 L 17 16 L 17 13 L 16 14 L 15 13 L 15 16 Z M 20 9 L 22 9 L 23 11 L 24 9 L 26 9 L 24 13 L 24 16 L 22 16 L 22 13 L 20 9 Z M 27 16 L 27 9 L 33 9 L 33 11 L 29 11 L 29 12 L 31 12 L 31 14 L 29 14 L 29 16 L 27 16 Z M 38 16 C 33 16 33 9 38 9 C 43 9 43 16 38 16 Z M 38 14 C 36 14 36 11 38 11 C 40 11 40 14 38 14 Z M 1 14 C -1 14 -1 11 1 11 C 3 11 3 14 1 14 Z M 47 16 C 42 16 42 9 47 9 C 52 9 52 16 47 16 Z M 47 14 C 45 14 45 11 47 11 C 49 11 49 14 47 14 Z M 52 16 L 52 9 C 61 9 61 16 52 16 M 54 14 L 54 11 C 57 11 57 14 54 14 Z" stroke="#050203" stroke-width="0.5" fill="none"/>
+          </svg>
+    </div>
+
+
 <!-- Partie Titre du site -->
     <header>
         <img src="img/ohmyfood.png" alt="logo ohmyfood"> <!-- LOGO ICI -->
@@ -29,7 +44,7 @@
             <h2>Réservez le menu qui vous convient</h2>
             <p>Découvrez des restaurants d'exception, séléctionés par nos soins.</p>
     
-            <button type="button">Explorer nos Restaurants</button>
+            <button type="button" class="generic">Explorer nos Restaurants</button>
         </div>
     </div>
 
