--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <article class="restaurant_choice">
             <a href="palette.html">
                 <figure class="restaurant_pic">
-                    <button type="button">Nouveau</button>
+                    <span class="new">Nouveau</span>
                     <img src="img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Palette du goût">
                 </figure>
                 <div class="info_restaurant">
@@ -89,7 +89,7 @@
         <article class="restaurant_choice">
             <a href="note.html">
                 <figure class="restaurant_pic">
-                    <button type="button">Nouveau</button>
+                    <span class="new">Nouveau</span>
                     <img src="img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                 </figure>
                 <div class="info_restaurant">
