--- a/palette.html
+++ b/palette.html
@@ -1,174 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OhMyFood | La palette du goût</title>
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet">
-
-</head>
-<body>
-<!-- Partie du Header -->
-<header>
-    <a href="index.html">
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- Partie du Header -->
+    <header>
+      <a href="index.html">
         <button type="button"><i class="fa-solid fa-arrow-left"></i></button>
-    </a>
-    <img src="img/ohmyfood.png" alt="logo ohmyfood"> <!-- LOGO ICI -->
-</header>
+      </a>
+      <img src="img/ohmyfood.png" alt="logo ohmyfood" />
+      <!-- LOGO ICI -->
+    </header>
 
-<!-- Partie de l'image de fond -->
-<section class="picture">
-    <img src="img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image de fond du menu La palette du goût">
-</section>
+    <!-- Partie de l'image de fond -->
+    <section class="picture">
+      <img
+        src="img/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+        alt="image de fond du menu La palette du goût"
+      />
+    </section>
 
-<!-- Partie de la présentation du menu -->
-<section class="menu">
-    <div class="title">
+    <!-- Partie de la présentation du menu -->
+    <section class="menu">
+      <div class="title">
         <h2 class="title_menu">La palette du goût</h2>
-        <i class="fa-regular fa-heart"></i>    
-    </div>
- <!-- Partie Entrées du menu-->
-    <div class="categorie">
+        <i class="fa-regular fa-heart"></i>
+      </div>
+      <!-- Partie Entrées du menu-->
+      <div class="categorie">
         <h3>Entrées</h3>
         <span class="bar_divider"></span>
 
         <article class="label_box">
-            <div class="anim_label">
-                <span>Fricassée d'escargot</span>
-                <div class="presentation_entree">
-                    <p>Au pimet d'espelette</p>
-                    <p class="price">25€</p>
-                </div>
+          <div class="anim_label">
+            <span>Fricassée d'escargot</span>
+            <div class="presentation_entree">
+              <p>Au pimet d'espelette</p>
+              <p class="price">25€</p>
             </div>
-            <i class="fa-solid fa-circle-check"></i>   
+          </div>
+          <i class="fa-solid fa-circle-check"></i>
         </article>
 
         <article class="label_box">
-            <div class="anim_label">
-                <span>Foie gras de canard mi-cuit</span>
-                <div class="presentation_entree">
-                    <p>Et ses copeaux de truffe noire</p>
-                    <p class="price">35€</p>
-                </div>
+          <div class="anim_label">
+            <span>Foie gras de canard mi-cuit</span>
+            <div class="presentation_entree">
+              <p>Et ses copeaux de truffe noire</p>
+              <p class="price">35€</p>
             </div>
-            <i class="fa-solid fa-circle-check"></i>   
+          </div>
+          <i class="fa-solid fa-circle-check"></i>
         </article>
 
         <article class="label_box">
-            <div class="anim_label">
-                <span>Oeuf au plat</span>
-                <div class="presentation_entree">
-                    <p>Assaisonné à la truffe sur lit de purée jaune</p>
-                    <p class="price">20€</p>
-                </div>
+          <div class="anim_label">
+            <span>Oeuf au plat</span>
+            <div class="presentation_entree">
+              <p>Assaisonné à la truffe sur lit de purée jaune</p>
+              <p class="price">20€</p>
             </div>
-            <i class="fa-solid fa-circle-check"></i>   
+          </div>
+          <i class="fa-solid fa-circle-check"></i>
         </article>
+      </div>
 
-    </div>
-
- <!-- Partie des plats du menu -->
-    <div class="categorie">
+      <!-- Partie des plats du menu -->
+      <div class="categorie">
         <h3>Plats</h3>
         <span class="bar_divider"></span>
 
         <article class="label_box">
-            <div class="anim_label">
-                <span>Filet de boeuf aux herbes</span>
-                <div class="presentation_entree">
-                    <p>Accompagné de sa ribambelle de légumes</p>
-                    <p class="price">40€</p>
-                </div>
+          <div class="anim_label">
+            <span>Filet de boeuf aux herbes</span>
+            <div class="presentation_entree">
+              <p>Accompagné de sa ribambelle de légumes</p>
+              <p class="price">40€</p>
             </div>
-            <i class="fa-solid fa-circle-check"></i>   
+          </div>
+          <i class="fa-solid fa-circle-check"></i>
         </article>
 
         <article class="label_box">
-            <div class="anim_label">
-                <span>parmentier de queue de boeuf</span>
-                <div class="presentation_entree">
-                    <p>A la truffe noir sur sa purée de panais</p>
-                    <p class="price">35€</p>
-                </div>
+          <div class="anim_label">
+            <span>parmentier de queue de boeuf</span>
+            <div class="presentation_entree">
+              <p>A la truffe noir sur sa purée de panais</p>
+              <p class="price">35€</p>
             </div>
-            <i class="fa-solid fa-circle-check"></i>   
+          </div>
+          <i class="fa-solid fa-circle-check"></i>
         </article>
 
         <article class="label_box">
-            <div class="anim_label">
-                <span>Filet de Turbot</span>
-                <div class="presentation_entree">
-                    <p>Aux agrumes</p>
-                    <p class="price">44€</p>
-                </div>
+          <div class="anim_label">
+            <span>Filet de Turbot</span>
+            <div class="presentation_entree">
+              <p>Aux agrumes</p>
+              <p class="price">44€</p>
             </div>
-            <i class="fa-solid fa-circle-check"></i>   
+          </div>
+          <i class="fa-solid fa-circle-check"></i>
         </article>
+      </div>
 
-    </div>
-
- <!-- Partie des desserts du menu-->
-    <div class="categorie">
+      <!-- Partie des desserts du menu-->
+      <div class="categorie">
         <h3>Desserts</h3>
         <span class="bar_divider"></span>
 
         <article class="label_box">
-            <div class="anim_label">
-                <span>Paris-Brest</span>
-                <div class="presentation_dessert">
-                    <p>Revisité</p>
-                    <p class="price">18€</p>
-                </div>
+          <div class="anim_label">
+            <span>Paris-Brest</span>
+            <div class="presentation_dessert">
+              <p>Revisité</p>
+              <p class="price">18€</p>
             </div>
-            <i class="fa-solid fa-circle-check"></i>   
+          </div>
+          <i class="fa-solid fa-circle-check"></i>
         </article>
 
         <article class="label_box">
-            <div class="anim_label">
-                <span>Macaron au chocolat d'exception</span>
-                <div class="presentation_entree">
-                    <p>Et glace à la vanille de Madagascar</p>
-                    <p class="price">22€</p>
-                </div>
+          <div class="anim_label">
+            <span>Macaron au chocolat d'exception</span>
+            <div class="presentation_entree">
+              <p>Et glace à la vanille de Madagascar</p>
+              <p class="price">22€</p>
             </div>
-            <i class="fa-solid fa-circle-check"></i>   
+          </div>
+          <i class="fa-solid fa-circle-check"></i>
         </article>
 
         <article class="label_box">
-            <div class="anim_label">
-                <span>Mousse au chocolat</span>
-                <div class="presentation_entree">
-                    <p>Au piment d'espelette et à la truffe noire</p>
-                    <p class="price">23€</p>
-                </div>
+          <div class="anim_label">
+            <span>Mousse au chocolat</span>
+            <div class="presentation_entree">
+              <p>Au piment d'espelette et à la truffe noire</p>
+              <p class="price">23€</p>
             </div>
-            <i class="fa-solid fa-circle-check"></i>   
+          </div>
+          <i class="fa-solid fa-circle-check"></i>
         </article>
+      </div>
 
-    </div>
-
-    <div class="btn_container">
+      <div class="btn_container">
         <button type="button" class="generic">Commander</button>
-    </div>
-</section>
-<!-- Partie du Footer -->
-<footer>
-    <h4>ohmyfood</h4>
-    <ul>
-        <!--logo--><li>Proposer un restaurant</li>
-        <!--logo--><li>Devenir partenaire</li>
+      </div>
+    </section>
+    <!-- Partie du Footer -->
+    <footer>
+      <h4>ohmyfood</h4>
+      <ul>
+        <!--logo-->
+        <li>Proposer un restaurant</li>
+        <!--logo-->
+        <li>Devenir partenaire</li>
         <li>Mentions légales</li>
         <li>Contact</li>
-    </ul>
-</footer>
-
-
-</body>
+      </ul>
+    </footer>
+  </body>
 </html>
