--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <!-- Partie Loader -->
-    <!-- <div class="loader">
+    <div class="loader">
       <div class="color_cont">
         <div class="color color1"></div>
         <div class="color color2"></div>
@@ -46,7 +46,7 @@
           fill="none"
         />
       </svg>
-    </div> -->
+    </div>
     <!-- Partie Titre du site -->
     <header>
       <img src="img/ohmyfood.png" alt="logo ohmyfood" />
