--- a/note.html
+++ b/note.html
@@ -55,7 +55,7 @@
       <!-- Partie Entrées du menu-->
       <div class="categorie categorie1">
         <h3>Entrées</h3>
-        <h4 class="bar_divider"></h4>
+        <span class="bar_divider"></span>
 
         <article class="label_box">
           <div class="label_description">
@@ -105,7 +105,7 @@
       <!-- Partie des plats du menu -->
       <div class="categorie categorie2">
         <h3>Plats</h3>
-        <h4 class="bar_divider"></h4>
+        <span class="bar_divider"></span>
 
         <article class="label_box">
           <div class="label_description">
@@ -144,7 +144,7 @@
       <!-- Partie des desserts du menu-->
       <div class="categorie categorie3">
         <h3>Desserts</h3>
-        <h4 class="bar_divider"></h4>
+        <span class="bar_divider"></span>
 
         <article class="label_box">
           <div class="label_description">
