--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <article class="restaurant_choice">
         <a href="palette.html">
           <figure class="restaurant_pic">
-            <button type="button">Nouveau</button>
+            <button>Nouveau</button>
             <img
               src="img/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
               alt="Palette du goût"
@@ -111,7 +111,7 @@
       <article class="restaurant_choice">
         <a href="note.html">
           <figure class="restaurant_pic">
-            <button type="button">Nouveau</button>
+            <button>Nouveau</button>
             <img
               src="img/stil-u2Lp8tXIcjw-unsplash.jpg"
               alt="La note enchantée"
