--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
       </div>
 
       <div class="notice_label">
-        <p class="notice_text">Choisissez un restaurant</p>
+        <p class="notice_text">Composez votre menu</p>
       </div>
 
       <div class="notice_label">
-        <p class="notice_text">Choisissez un restaurant</p>
+        <p class="notice_text">Dégustez au restaurant</p>
       </div>
     </section>
 
